--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,102 +1,47 @@
 version: '2.1'
-  services:
+services:
     picaditos-proxy:
-      image: dehormaza45/proxy
-      depends_on:
-        - picaditos-api
-      ports:
-        - "80:80"
+        image: dehormaza45/proxy
+        depends_on:
+            - picaditos-api
+        ports:
+            - '80:80'
     picaditos-api:
-      build: .
-      environment:
-        PORT: '5000'
-        SHOW_URLS: 'true'
-
-        TEAMS_URL: '35.204.41.239'
-        TEAMS_PORT: '4002'
-        TEAMS_ENTRY: 'teams'
-
-        LOGIN_URL: '35.204.41.239'
-        LOGIN_PORT: '4001'
-        LOGIN_ENTRY: 'auth/'
-
-        MATCHES_URL: '35.204.41.239'
-        MATCHES_PORT: '4004'
-        MATCHES_ENTRY: 'api/matches'
-
-        COURTS_URL: '35.204.41.239'
-        COURTS_PORT: '4005'
-        COURTS_ENTRY: 'courts'
-
-        MESSAGES_URL: '35.204.41.239'
-        MESSAGES_PORT: '4003'
-        MESSAGES_ENTRY: 'message'
-    
+        build: .
+        environment:
+            PORT: '5000'
+            SHOW_URLS: 'true'
+            TEAMS_URL: 35.204.41.239
+            TEAMS_PORT: '4002'
+            TEAMS_ENTRY: teams
+            LOGIN_URL: 35.204.41.239
+            LOGIN_PORT: '4001'
+            LOGIN_ENTRY: auth/
+            MATCHES_URL: 35.204.41.239
+            MATCHES_PORT: '4004'
+            MATCHES_ENTRY: api/matches
+            COURTS_URL: 35.204.41.239
+            COURTS_PORT: '4005'
+            COURTS_ENTRY: courts
+            MESSAGES_URL: 35.204.41.239
+            MESSAGES_PORT: '4003'
+            MESSAGES_ENTRY: message
     login-db:
-      image: mysql:5.7.22
-      ports:
-        - "3307:3307"
-      environment:
-        MYSQL_ROOT_PASSWORD: 123
-        MYSQL_USER: picaditos
-        MYSQL_PASSWORD: 123
-        MYSQL_DATABASE: login
-        MYSQL_HOST: login-db
+        image: 'mysql:5.7.22'
+        ports:
+            - '3307:3307'
+        environment:
+            MYSQL_ROOT_PASSWORD: 123
+            MYSQL_USER: picaditos
+            MYSQL_PASSWORD: 123
+            MYSQL_DATABASE: login
+            MYSQL_HOST: login-db
     login-ms:
-      image: dehormaza45/users-ms
-      command: bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4001 -b '0.0.0.0'"
-      ports:
-        - "4001:4001"
-      depends_on:
-        - login-db
-      links:
-        - login-db   
-    
-    courts-ms:
-      image: dehormaza45/courts  
-      ports:
-        - "4005:4005"
-      depends_on:
-        - courts-db
-    courts-db:
-      image: mysql:5.7
-      environment:
-        MYSQL_ROOT_PASSWORD: 12345678
-        MYSQL_DATABASE: courts-db
-        MYSQL_USER: root
-        MYSQL_PASSWORD: 12345678
-        MYSQL_HOST: courts-db
-      ports:
-        - "3306:3306"
-    messages-ms:
-      image: dehormaza45/messages
-      depends_on:
-        - mongo-db
-      links:
-        - mongo-db
-      ports:
-        - "4003:4003"
-    mongo-db:
-      image: mongo
-      ports:
-        - "27017:27017"
-      volumes:
-        - "mongodata:/data/db"
-    teams-ms:
-      image: dehormaza45/teams
-      command: python manage.py runserver 0.0.0.0:4002
-      expose:
-        - "4002"
-      ports:
-        - "4002:4002"
-      links:
-      - teams-db
-
-    teams-db:
-      image: mongo
-      command: mongod --port 27020
-      volumes:
-          - "mongodata:/data/db"
-      ports:
-        - "27020:27020"
-    
+        image: dehormaza45/users-ms
+        command: 'bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4001 -b ''0.0.0.0''"'
+        ports:
+            - '4001:4001'
+        depends_on:
+            - login-db
+        links:
+            - login-db
